--- a/src/components/Avatar/index.module.scss
+++ b/src/components/Avatar/index.module.scss
@@ -2,10 +2,10 @@
     border-radius: 50%;
 }
 
-.avatarActive {
+.avatar-active {
     border: 1px solid #93C5FD;
 }
 
-.avatarEmpty {
+.avatar-empty {
     background: #dee2e6;
 }
