--- a/src/layouts/Layout/Layout.module.scss
+++ b/src/layouts/Layout/Layout.module.scss
@@ -1,20 +1,19 @@
 .layout {
   background-color: #e2e8f0;
+
   &_wrap {
     display: flex;
   }
 
   &_sidebar {
-    width: 100%;
+    background-color: #fff;
     max-width: 264px;
-
-    background-color: #ffffff;
+    width: 100%;
   }
 
   &_content {
-    width: 100vw;
     height: 100vh;
-
     margin-top: 70px;
+    width: 100vw;
   }
 }
