--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,12 +1,11 @@
 .header {
   position: fixed;
-  left: 0;
   top: 0;
   right: 0;
+  left: 0;
   z-index: 1;
-
   width: 100%;
   height: 70px;
-  background-color: #ffffff;
+  background-color: #fff;
   border-bottom: 1px solid #93c5fd;
 }
