--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,61 +1,46 @@
 .modal {
   position: absolute;
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   z-index: 99;
   max-width: 100vw;
   max-height: 100vh;
-
-  background-color: rgba(100, 116, 139, 0.3);
+  background-color: rgb(100 116 139 / 30%);
 
   &_element {
     position: absolute;
-    left: 50%;
     top: 50%;
+    left: 50%;
     z-index: 100;
-
-    max-width: 550px;
     width: 100%;
+    max-width: 550px;
     height: 260px;
     padding: 15px;
-
+    background-color: #fff;
     border-radius: 8px;
-
-    box-shadow: 0px 0px 1px 0px rgba(9, 30, 66, 0.31);
-    box-shadow: 0px 3px 8px 0px rgba(9, 30, 66, 0.16);
-
-    background-color: #ffffff;
+    box-shadow: 0 3px 8px 0 rgb(9 30 66 / 16%);
     transform: translate(-50%, -50%);
   }
 
   &_header {
     display: flex;
-
     margin-bottom: 16px;
   }
 
   &_title {
     margin: 0;
-    font-size: 18px;
+
     // line-height: 32px;
     font-weight: 550;
+    font-size: 18px;
   }
 
   &_closeBtn {
     position: absolute;
     top: 10px;
     right: 10px;
-
     padding: 2px;
-
     background-color: transparent;
     border: none;
-
     cursor: pointer;
-  }
-
-  &_content {
   }
 }
