--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -1,12 +1,12 @@
 .root {
-  align-items: center;
-  background: #FFF;
-  border-bottom: 1px solid #93C5FD;
-  display: flex;
-  justify-content: space-between;
-  padding: 18px 32px;
   position: sticky;
   top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 18px 32px;
+  border-bottom: 1px solid #93c5fd;
+  background: #fff;
 }
 
 .logo {
