--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 18px 32px;
+  height: 70px;
+  padding: 6px 16px;
   background: #fff;
   border-bottom: 1px solid #93c5fd;
 }
