--- a/src/components/CardBrief/CardBrief.module.scss
+++ b/src/components/CardBrief/CardBrief.module.scss
@@ -1,27 +1,31 @@
-@import '../../app/styles/vars.module.scss';
+/* stylelint-disable */
+@import '../../app/styles/vars.module';
 
 .cardBrief {
   display: flex;
   align-items: center;
-  margin: 0 auto;
   max-width: 784px;
+  margin: 0 auto;
   padding: 2px 10px;
-  border-bottom: 0.5px solid $border-color;
-  border-top: 0.5px solid $border-color;
   color: $text-gray-color;
-  font-family: 'Roboto', sans-serif;
   font-size: 16px;
+  font-family: Roboto, sans-serif;
+  border-top: 0.5px solid $border-color;
+  border-bottom: 0.5px solid $border-color;
   cursor: pointer;
+
   & > div {
-    flex: 1;
     display: flex;
-    justify-content: space-around;
+    flex: 1;
     align-items: center;
+    justify-content: space-around;
     padding: 8px;
   }
+
   &.cardBrief:hover {
     background-color: $bg-gray-color;
   }
+
   .icon {
     display: flex;
     font-size: 18px;
@@ -30,44 +34,53 @@
   .arrowDown {
     transform: rotate(180deg);
   }
+
   .red {
     color: $red-color;
   }
+
   .green {
     color: $green-color;
   }
+
   &.cardBrief:hover {
     background-color: $bg-gray-color;
   }
+
   .category {
     display: flex;
     justify-content: flex-start;
-    font-weight: 700;
     color: $text-gray-color;
+    font-weight: 700;
   }
 
   .summ {
     display: flex;
-    justify-content: left;
     align-items: center;
+    justify-content: left;
 
     &.red {
       color: $red-color;
     }
+
     &.green {
       color: $green-color;
     }
   }
+
   .shortDescription {
     display: flex;
-    justify-content: left;
     align-items: center;
+    justify-content: left;
   }
+
   .description {
     display: flex;
     justify-content: space-between;
     overflow: hidden;
-    text-overflow: ellipsis;
     white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
+
+/* stylelint-enable */
