--- a/src/components/CardFull/CardFull.module.scss
+++ b/src/components/CardFull/CardFull.module.scss
@@ -1,32 +1,35 @@
-@import '../../app/styles/vars.module.scss';
+/* stylelint-disable */
+@import '../../app/styles/vars.module';
 
 .cardFull {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   max-width: 378px;
   max-height: 572px;
   margin: 0 auto;
   padding: 20px 30px;
-  border-radius: 4px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   overflow: hidden;
   color: $text-gray-color;
+  border-radius: 4px;
+  box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
 
   .cardTop {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    font-size: 40px;
+    justify-content: space-between;
     padding-bottom: 80px;
+    font-size: 40px;
     -bottom: 80px;
   }
+
   .cardMiddle {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     padding-bottom: 20px;
   }
+
   .icon {
     display: flex;
   }
@@ -34,62 +37,70 @@
   .arrowDown {
     transform: rotate(180deg);
   }
+
   .red {
     color: $red-color;
   }
+
   .green {
     color: $green-color;
   }
+
   .category {
     display: flex;
     justify-content: flex-start;
-    font-size: 24px;
-    font-weight: 700;
     color: $text-gray-color;
+    font-weight: 700;
+    font-size: 24px;
   }
 
   .summ {
     display: flex;
-    justify-content: left;
     align-items: center;
+    justify-content: left;
     font-size: 24px;
 
     &.red {
       color: $red-color;
     }
+
     &.green {
       color: $green-color;
     }
   }
+
   .shortDescription {
-    font-size: 20px;
     padding-bottom: 10px;
     overflow: hidden;
+    font-size: 20px;
     word-break: break-all;
   }
+
   .description {
     display: flex;
     justify-content: space-between;
     padding-bottom: 10px;
-    font-size: 16px;
     overflow: hidden;
+    font-size: 16px;
     word-break: break-all;
   }
 
   .date {
-    font-size: 12px;
-    color: #999;
     margin-bottom: 16px;
+    color: #999;
+    font-size: 12px;
   }
 
   .editButton {
     color: $text-gray-color;
-    border: none;
-    background: none;
-    cursor: pointer;
     font-size: 40px;
+    background: none;
+    border: none;
+    cursor: pointer;
+
     &:hover {
       opacity: 0.8;
     }
   }
 }
+/* stylelint-enable */
