переписал по бем, удалил коментарии, добавил date в сторибук

--- a/src/components/CardFull/CardFull.module.scss
+++ b/src/components/CardFull/CardFull.module.scss
@@ -1,51 +1,39 @@
-/* stylelint-disable */
-@import '../../app/styles/vars.module';
+@import '../../app/styles/vars.module.scss';
 
 .cardFull {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
   max-width: 378px;
   max-height: 572px;
   margin: 0 auto;
   padding: 20px 30px;
+  border-radius: 4px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   overflow: hidden;
   color: $text-gray-color;
-  border-radius: 4px;
-  box-shadow: 0 4px 8px rgb(0 0 0 / 10%);
 
   .cardFull__cardTop {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding-bottom: 80px;
+    align-items: center;
     font-size: 40px;
+    padding-bottom: 80px;
     -bottom: 80px;
   }
-<<<<<<< HEAD
   .cardFull__cardMiddle {
-=======
-
-  .cardMiddle {
->>>>>>> 103fad7add5cc8b14200eaa007ed5b6b3d20c98c
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
     padding-bottom: 20px;
   }
-<<<<<<< HEAD
   .cardFull__icon {
-=======
-
-  .icon {
->>>>>>> 103fad7add5cc8b14200eaa007ed5b6b3d20c98c
     display: flex;
   }
 
   .cardFull_arrowDown {
     transform: rotate(180deg);
   }
-<<<<<<< HEAD
   .cardFull_red {
     color: $red-color;
   }
@@ -53,88 +41,48 @@
     color: $green-color;
   }
   .cardFull__category {
-=======
-
-  .red {
-    color: $red-color;
-  }
-
-  .green {
-    color: $green-color;
-  }
-
-  .category {
->>>>>>> 103fad7add5cc8b14200eaa007ed5b6b3d20c98c
     display: flex;
     justify-content: flex-start;
-    color: $text-gray-color;
-    font-weight: 700;
     font-size: 24px;
+    font-weight: 700;
+    color: $text-gray-color;
   }
 
   .cardFull__summ {
     display: flex;
-    align-items: center;
     justify-content: left;
+    align-items: center;
     font-size: 24px;
-<<<<<<< HEAD
   }
   .cardFull__shortDescription {
     font-size: 20px;
-=======
-
-    &.red {
-      color: $red-color;
-    }
-
-    &.green {
-      color: $green-color;
-    }
-  }
-
-  .shortDescription {
->>>>>>> 103fad7add5cc8b14200eaa007ed5b6b3d20c98c
     padding-bottom: 10px;
     overflow: hidden;
-    font-size: 20px;
     word-break: break-all;
   }
-<<<<<<< HEAD
   .cardFull__description {
-=======
-
-  .description {
->>>>>>> 103fad7add5cc8b14200eaa007ed5b6b3d20c98c
     display: flex;
     justify-content: space-between;
     padding-bottom: 10px;
-    overflow: hidden;
     font-size: 16px;
+    overflow: hidden;
     word-break: break-all;
   }
 
-<<<<<<< HEAD
   .cardFull__date {
     font-size: 12px;
     color: #999;
-=======
-  .date {
->>>>>>> 103fad7add5cc8b14200eaa007ed5b6b3d20c98c
     margin-bottom: 16px;
-    color: #999;
-    font-size: 12px;
   }
 
   .cardFull__editButton {
     color: $text-gray-color;
-    font-size: 40px;
-    background: none;
     border: none;
+    background: none;
     cursor: pointer;
-
+    font-size: 40px;
     &:hover {
       opacity: 0.8;
     }
   }
 }
-/* stylelint-enable */
