--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,47 +1,41 @@
 .button {
   display: flex;
-  justify-content: center;
   align-items: center;
-
+  justify-content: center;
   min-width: 136px;
+
   // width: 100%;
   // height: 56px;
   padding: 10px 20px;
-
+  color: #fff;
   font-size: 18px;
   line-height: 20px;
-
-  color: #ffffff;
-  background-color: rgba(59, 130, 246, 1);
-
+  background-color: rgb(59 130 246 / 100%);
   border: 2px solid transparent;
   border-radius: 8px;
-
   cursor: pointer;
 
   &:hover {
-    background-color: rgba(29, 78, 216, 1);
+    background-color: rgb(29 78 216 / 100%);
   }
 
   &:focus {
-    border-color: rgba(96, 165, 250, 1);
-    background-color: rgba(37, 99, 235, 1);
+    background-color: rgb(37 99 235 / 100%);
+    border-color: rgb(96 165 250 / 100%);
   }
 
   &:active {
-    background-color: rgba(30, 64, 175, 1);
+    background-color: rgb(30 64 175 / 100%);
   }
 
   &:disabled {
-    background-color: rgba(147, 197, 253, 1);
-
+    background-color: rgb(147 197 253 / 100%);
     cursor: default;
   }
 
   &__small {
     min-width: 124px;
     padding: 6px 20px;
-
     font-size: 14px;
     line-height: 16px;
   }
@@ -49,39 +43,37 @@
   &__medium {
     min-width: 130px;
     padding: 8px 20px;
-
     font-size: 16px;
     line-height: 20px;
   }
 
   &__secondary {
+    color: rgb(59 130 246 / 100%);
     background-color: transparent;
-    border-color: rgba(59, 130, 246, 1);
-    color: rgba(59, 130, 246, 1);
+    border-color: rgb(59 130 246 / 100%);
 
     &:hover {
+      color: rgb(29 78 216 / 100%);
       background-color: transparent;
-      border-color: rgba(29, 78, 216, 1);
-      color: rgba(29, 78, 216, 1);
+      border-color: rgb(29 78 216 / 100%);
     }
 
     &:focus {
+      color: rgb(96 165 250 / 100%);
       background-color: transparent;
-      border-color: rgba(96, 165, 250, 1);
-      color: rgba(96, 165, 250, 1);
+      border-color: rgb(96 165 250 / 100%);
     }
 
     &:active {
+      color: rgb(30 64 175 / 100%);
       background-color: transparent;
-      border-color: rgba(30, 64, 175, 1);
-      color: rgba(30, 64, 175, 1);
+      border-color: rgb(30 64 175 / 100%);
     }
 
     &:disabled {
+      color: rgb(147 197 253 / 100%);
       background-color: transparent;
-      border-color: rgba(147, 197, 253, 1);
-      color: rgba(147, 197, 253, 1);
-
+      border-color: rgb(147 197 253 / 100%);
       cursor: default;
     }
   }
