--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,4 +1,4 @@
-.root {
+.header {
   position: sticky;
   top: 0;
   display: flex;
@@ -6,6 +6,12 @@
   justify-content: space-between;
   height: 70px;
   padding: 6px 16px;
-  background: #fff;
+  background-color: #fff;
   border-bottom: 1px solid #93c5fd;
+
+  &_rightBlock {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+  }
 }
