--- a/src/components/Switch/Switch.module.scss
+++ b/src/components/Switch/Switch.module.scss
@@ -1,30 +1,17 @@
 .switch {
   display: flex;
-  align-items: center;
   gap: 8px;
-
+  align-items: center;
   min-width: 120px;
 
-  &__small {
-    .switch_labelButton {
-      width: 38px;
-      height: 22px;
-    }
-
-    .switch_labelButton:active span {
-      width: 25px;
-    }
-
-    .switch_labelButton .switch_button {
-      width: 18px;
-      height: 18px;
-    }
+  &_input {
+    width: 0;
+    height: 0;
+    visibility: hidden;
   }
 
-  &_input {
-    height: 0;
-    width: 0;
-    visibility: hidden;
+  &_label:active span {
+    width: 30px;
   }
 
   &_input:checked + label span {
@@ -32,16 +19,16 @@
     transform: translateX(-100%);
   }
 
-  &_labelButton {
+  &_label {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    cursor: pointer;
     width: 50px;
     height: 25px;
     background: grey;
     border-radius: 100px;
-    position: relative;
+    cursor: pointer;
     transition: background-color 0.2s;
 
     &__active {
@@ -49,24 +36,36 @@
     }
   }
 
-  &_labelButton:active span {
-    width: 30px;
-  }
-
-  &_labelButton &_button {
-    content: '';
+  &_label &_button {
     position: absolute;
     top: 2px;
     left: 2px;
     width: 20px;
     height: 20px;
-    border-radius: 45px;
-    transition: 0.2s;
     background: #fff;
-    box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
+    border-radius: 45px;
+    box-shadow: 0 0 2px 0 rgb(10 10 10 / 29%);
+    transition: 0.2s;
+    content: '';
   }
 
-  &_label {
+  &_text {
     cursor: pointer;
+  }
+
+  &__small {
+    .switch_label {
+      width: 38px;
+      height: 22px;
+    }
+
+    .switch_label:active span {
+      width: 25px;
+    }
+
+    .switch_label .switch_button {
+      width: 18px;
+      height: 18px;
+    }
   }
 }
