feat: 4 add list components and add logic infinite scroll for list

--- a/src/app/styles/vars.module.scss
+++ b/src/app/styles/vars.module.scss
@@ -45,6 +45,10 @@ $bg-color: var(--blue-gray-50);
 $bg-gray-color: var(--blue-gray-50);
 $border-color: var(--slate-400);
 $border-color-blue: var(--blue-300);
+$primary-text-color: var(--blue-gray-800);
+$secondary-text-color: var(--blue-gray-600);
+$gray: var(--blue-gray-200);
+$blue: var(--blue-300);
 $dark: #121923;
 $white: #fff;
 
