--- a/src/layouts/Layout/Layout.module.scss
+++ b/src/layouts/Layout/Layout.module.scss
@@ -15,7 +15,7 @@
 
   &_content {
     width: 100vw;
-    height: 100vh;
-    margin-top: 70px;
+    height: calc(100vh - 70px);
+    padding-top: 50px;
   }
 }
