--- a/src/app/styles/vars.module.scss
+++ b/src/app/styles/vars.module.scss
@@ -1,4 +1,11 @@
 :root {
+  --font-family-main: roboto, arial, sans-serif;
+  --font-size-s: 14px;
+  --font-line-s: 16px;
+  --font-s: var(--font-size-s) / var(--font-line-s) var(--font-family-main);
+  --font-size-m: 16px;
+  --font-line-m: 20px;
+  --font-m: var(--font-size-m) / var(--font-line-m) var(--font-family-main);
   --bg-color: #fff;
   --blue-gray-50: #f8fafc;
   --blue-gray-200: #e2e8f0;
