--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -12,8 +12,8 @@
     left: 50%;
     z-index: 100;
     width: 100%;
-    max-width: 550px;
-    height: 260px;
+    max-width: 45vw;
+    height: 60vh;
     padding: 15px;
     background-color: #fff;
     border-radius: 8px;
@@ -28,8 +28,6 @@
 
   &_title {
     margin: 0;
-
-    // line-height: 32px;
     font-weight: 550;
     font-size: 18px;
   }
@@ -42,5 +40,10 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+  }
+
+  &_content {
+    height: calc(100% - 40px);
+    padding: 12px;
   }
 }
