--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-width: 150px;
   margin: 25px 0;
 
   &_required {
@@ -23,6 +24,7 @@
   position: absolute;
   top: -12px;
   left: 20px;
+  z-index: 1;
   color: #64748b;
   transform: translateY(-50%);
   cursor: text;
@@ -44,11 +46,8 @@
   border: 1px solid transparent;
   border-radius: 25px;
   cursor: text;
+  cursor: default;
   opacity: 0.3s;
-
-  &::-webkit-input-placeholder {
-    color: transparent;
-  }
 
   &:hover {
     border: 1px solid #3b82f6;
@@ -73,6 +72,10 @@
 
   &__inner {
     padding: 16px 32px;
+
+    &::-webkit-input-placeholder {
+      color: transparent;
+    }
 
     &:focus + .input_label {
       transform: translate(-7px, -25px) scale(0.8);
