--- a/src/components/List/components/Item/Item.module.scss
+++ b/src/components/List/components/Item/Item.module.scss
@@ -39,13 +39,13 @@
     display: flex;
     justify-content: center;
 
-    &__profit {
+    &__income {
       path {
         fill: rgb(34 197 94 / 100%);
       }
     }
 
-    &__cost {
+    &__expense {
       path {
         fill: rgb(239 68 68 / 100%);
       }
