--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -13,7 +13,8 @@
     z-index: 100;
     width: 100%;
     max-width: 45vw;
-    height: 60vh;
+    height: 100%;
+    max-height: 75vh;
     padding: 15px;
     background-color: #fff;
     border-radius: 8px;
@@ -23,13 +24,12 @@
 
   &_header {
     display: flex;
-    margin-bottom: 16px;
   }
 
   &_title {
     margin: 0;
     font-weight: 550;
-    font-size: 18px;
+    font-size: 24px;
   }
 
   &_closeBtn {
