--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -9,6 +9,17 @@
   background-color: #fff;
   border-bottom: 1px solid #93c5fd;
 
+  &_link {
+    color: #475569;
+    text-decoration: none;
+    border-bottom: 2px solid transparent;
+
+    &__active {
+      color: #2563eb;
+      border-bottom: 2px solid #2563eb;
+    }
+  }
+
   &_rightBlock {
     display: flex;
     gap: 24px;
