--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,7 +2,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 136px;
+
+  // min-width: 136px;
 
   // width: 100%;
   // height: 56px;
@@ -34,14 +35,14 @@
   }
 
   &__small {
-    min-width: 124px;
+    // min-width: 124px;
     padding: 6px 20px;
     font-size: 14px;
     line-height: 16px;
   }
 
   &__medium {
-    min-width: 130px;
+    // min-width: 130px;
     padding: 8px 20px;
     font-size: 16px;
     line-height: 20px;
@@ -52,22 +53,38 @@
     background-color: transparent;
     border-color: rgb(59 130 246 / 100%);
 
+    & path {
+      fill: rgb(59 130 246 / 100%);
+    }
+
     &:hover {
       color: rgb(29 78 216 / 100%);
       background-color: transparent;
       border-color: rgb(29 78 216 / 100%);
+
+      & path {
+        fill: rgb(29 78 216 / 100%);
+      }
     }
 
     &:focus {
       color: rgb(96 165 250 / 100%);
       background-color: transparent;
       border-color: rgb(96 165 250 / 100%);
+
+      & path {
+        fill: rgb(96 165 250 / 100%);
+      }
     }
 
     &:active {
       color: rgb(30 64 175 / 100%);
       background-color: transparent;
       border-color: rgb(30 64 175 / 100%);
+
+      & path {
+        fill: rgb(30 64 175 / 100%);
+      }
     }
 
     &:disabled {
@@ -75,6 +92,10 @@
       background-color: transparent;
       border-color: rgb(147 197 253 / 100%);
       cursor: default;
+
+      & path {
+        fill: rgb(147 197 253 / 100%);
+      }
     }
   }
 }
