--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -28,6 +28,19 @@
     line-height: 28px;
   }
 
+  &_empty {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: calc(100% - 20px);
+    margin: 0 auto;
+    color: var(--blue-gray-800);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
   &_items {
     height: calc(86px * 5 - 1px);
     overflow: auto;
